# remake

./: .coverage  CONTRIBUTING.md  LICENSE  Pipfile  README.md  ReadMe.md  get.sh  pyproject.toml
.github/workflows/: lint.yaml  pylintrc  pytest.yaml  python-app.yml  ward.yaml
doc/: builders.md  rules.md
examples/: ReMakeFile.c  ReMakeFile.latex  ReMakeFile.noFileTargets  ReMakefile.c
remake/: .coverage  __init__.py  __main__.py  builders.py  context.py  main.py  paths.py  remake.py  rules.py
test/: test_builders.py  test_func.py  test_rules.py
tests/: test_builders.py  test_context.py  test_func.py  test_main.py  test_remakefile.py  test_rules.py
