[tool.poetry]
name = "remake"
version = "v1.2.0+adf36a7"
description = ""
authors = ["drakes00 <drakes00@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.4.2"
ward = "^0.68.0b0"
typeguard = "^4.1.5"
ward-coverage = "^0.3.1"

[tool.ward]
hook_module = ["ward_coverage"]

[tool.ward.plugins.coverage]
omit = ["tests/*", "**/__init__.py"]

[tool.poetry.group.dev.dependencies]
dunamai = "^1.19.0"
pylint = "^3.1.0"
pydeps = "^1.12.20"

[tool.poetry-dynamic-versioning]
enable = true
format = "v{base}+{commit}"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
