[project]
name = "remake"
version = "v1.2.0+adf36a7"
description = ""
authors = [
    {name = "Maxime Puys", email = "drakes00@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
dependencies = ["rich (>=15.0.0,<16.0.0)", "typeguard (>=4.5.2,<5.0.0)"]

[tool.poetry]
packages = [{include = "remake"}]

[tool.poetry.group.dev.dependencies]
dunamai = "^1.19.0"
pydeps = "^1.12.20"
pytest = ">=9.0.2,<10.0.0"
pytest-asyncio = ">=1.3.0,<2.0.0"
pytest-cov = ">=7.0.0,<8.0.0"
pytest-mock = "^3.15.1"
pylint = "^4.0.5"
ty = "^0.0.23"

[tool.poetry-dynamic-versioning]
enable = true
format = "v{base}+{commit}"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
